k8s_use/discovery/stripPrefik.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: test
spec:
  stripPrefix:
    prefixes:
      - "/web"
#    forceSlash: false
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: test-auth
  namespace: test
spec:
  basicAuth:
    secret: authsecret
