k8s_use/discovery/pod_web.yaml
apiVersion: v1
kind: Pod

metadata:
  name: web
  namespace: test
  labels:
    app: web

spec:
  containers:
    - name: web
      image: nginx
      imagePullPolicy: IfNotPresent
      ports:
        - name: port0
          containerPort: 80
#          hostPort: 30080
