k8s_use/discovery/ingress_web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#  ingressClassName: nginx-example
  rules:
    - host: "foo.bar.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-web
                port:
                  number: 80
