k8s_use/discovery/ingressroute_web_auth.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web-ingressroute-auth
  namespace: test
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`foo.bar.cn`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: test-auth
      services:
        - name: svc-web
          port: 80
---
# Declaring the user list
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: test-auth
  namespace: test
spec:
  basicAuth:
    secret: authsecret

---
